# collision-detection

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cu
src/: CMakeLists.txt  data.cuh  main.cu  simulation.cu  simulation.cuh
